--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
-        <div class="photographer_section"></div>
+        <section class="photographers-section"></section>
     </main>
-    <script src="scripts/templates/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script src="scripts/pages/index.js" type="module"></script>
+
   </body>
 </html>
