final version with keyboard navigation ok, to do accessibility check and final tests

--- a/photographer.html
+++ b/photographer.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <!--
-      <link href="css/photographer.css" rel="stylesheet" type="text/css" />
-    -->
+    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -13,31 +11,30 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html" aria-label="Accéder à la page d'accueil" title="Page d'accueil">
+        <img src="assets/images/logo.png" class="logo" alt="Logo de Fisheye" />
+      </a>
     </header>
     <main id="main">
 
-
       <section class="photographer-header">
         <div class="photographer-info">
-
         </div>
 
-        <button class="contact-button-open">Contactez-moi</button>
+        <button class="contact-button-open" aria-label="Ouvrir le formulaire de contact">Contactez-moi</button>
 
         <div class="photographer-portrait-container">
-
         </div>
       </section>
 
-        <nav role="filter media">
-            <label for="sortOption">Trier par</label>
-            <select id="sortOption">
-                <option value="Popularity">Popularité</option>
-                <option value="Date">Date</option>
-                <option value="Title">Titre</option>
-            </select>
-        </nav>
+      <nav role="navigation" aria-label="Navigation pour trier les médias">
+        <label for="sortOption">Trier par</label>
+        <select id="sortOption" aria-label="Sélectionner la méthode de tri">
+            <option value="Popularity">Popularité</option>
+            <option value="Date">Date</option>
+            <option value="Title">Titre</option>
+        </select>
+      </nav>
 
       <section class="medias-gallery">
       </section>
@@ -46,20 +43,20 @@
 
     <aside>
       <p class="photographer-sticky-resume">
-        <span class="cumulative-likes-counter"></span>
+        <span class="cumulative-likes-counter" aria-live="off" aria-label="Nombre total de likes"></span>
         <span class="fas fa-heart" aria-hidden="true"></span>
       </p>
-      <span class="daily-price"></span><span>€/jour</span>
+      <span class="daily-price" aria-label="Tarif par jour"></span><span>€/jour</span>
     </aside>
 
-    <div class="contact-modal-wrapper modal-wrapper">
+    <div class="contact-modal-wrapper modal-wrapper" tabindex="-1" role="dialog" aria-labelledby="formTitle" aria-hidden="true">
       <div class="contact-form-container">
         <header class="header">
           <h1 id="formTitle" class="title">
             Contactez-moi
             <p class="modal-photographer-name"></span>
-          </h2>
-          <span class="close-button close" aria-label="Fermer contact form" tabindex="0">
+          </h1>
+          <span class="close-button close" aria-label="Fermer le formulaire de contact" tabindex="0">
             &#x2715; <!-- Unicode character for a cross -->
           </span>
         </header>
@@ -87,15 +84,15 @@
     </div>
 
 
-    <div id="lightbox" aria-hidden="true" tabindex="-1" class="lightbox">
+    <div id="lightbox" class="lightbox" aria-hidden="true" tabindex="-1" role="dialog">
       <div class="lightbox-content" role="dialog" aria-labelledby="lightbox-title">
-          <button id="close-lightbox" aria-label="Close lightbox">&times;</button>
+          <button id="close-lightbox" aria-label="Fermer la lightbox">&times;</button>
           <div class="lightbox-body">
               <div id="lightbox-media-container"></div>
               <div id="lightbox-title"></div>
           </div>
-          <button id="prev-lightbox" aria-label="Previous image">&#10094;</button>
-          <button id="next-lightbox" aria-label="Next image">&#10095;</button>
+          <button id="prev-lightbox" aria-label="Image précédente">&#10094;</button>
+          <button id="next-lightbox" aria-label="Image suivante">&#10095;</button>
       </div>
     </div>
 
