--- a/photographer.html
+++ b/photographer.html
@@ -60,7 +60,7 @@
             &#x2715; <!-- Unicode character for a cross -->
           </span>
         </header>
-        <form id="contactForm">
+        <form id="contactForm" aria-label="Formulaire de contact">
           <div>
               <label for="firstname">Prénom</label>
               <input type="text" id="firstname" aria-label="Prénom" data-error="Le prénom est requis">
