--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+<head>
     <meta charset="utf-8">
+    <title>Fisheye</title>
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye</title>
-  </head>
-  <body>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
     <header>
-        <img src="assets/images/logo.png" class="logo" alt="Logo de Fisheye"/>
+        <img src="assets/images/logo.png" class="logo" alt="Logo de Fisheye">
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
         <section class="photographers-section"></section>
     </main>
     <script src="scripts/pages/index.js" type="module"></script>
-
-  </body>
+</body>
 </html>
